tests/k8s_testcases/network-policy-checks-bad-path/peer_no_specified_fields.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: peer-namespaceselector-test-none
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
  egress:
    - to: # no specified fields
        # none value for selector and no other fields
        - namespaceSelector:
